# PlantGrowth

./: .gitignore  CMakeLists.txt  README.md
include/: FractalSystem.h  NGLScene.h  WindowParams.h  grammar.h
shaders/: VFragment.glsl  VVertex.glsl
src/: FractalSystem.cpp  NGLScene.cpp  grammar.cpp  main  main.cpp
tests/: GrammarTest.cpp
